--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ a {
 
 .flex-column {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: nowrap;
   padding: 10px;
 }
